Better hover/focus, colors for aie/mediaware

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
       <p class="boxed-heading">
         I'm the creator of this:
       </p>
-      <div class="boxed">
-        <a class="yarnball-link" href="https://yarnball.io/">
-          <img src="assets/yarnball-logo.svg">
-        </a>
-      </div>
+      <a class="boxed yarnball-link" href="https://yarnball.io/">
+        <img src="assets/yarnball-logo.svg">
+      </a>
       <p class="boxed-heading">
         I've used these:
       </p>
@@ -64,27 +62,21 @@
       <p class="boxed-heading">
         I've studied here:
       </p>
-      <div class="boxed work-box">
-        <a class="work-logo" href="http://www.aie.edu.au/">
-          <img class="work-logo" src="assets/aie-logo.svg">
-        </a>
+      <a class="boxed work-box aie-box" href="http://www.aie.edu.au/">
+        <img class="work-logo" src="assets/aie-logo.svg">
         <span class="years">1 year</span>
-      </div>
+      </a>
       <p class="boxed-heading">
         And worked here:
       </p>
-      <div class="boxed work-box">
-        <a class="work-logo" href="http://www.mediaware.com.au">
-          <img class="work-logo" src="assets/mediaware-logo.svg">
-        </a>
+      <a class="boxed work-box mediaware-box" href="http://www.mediaware.com.au">
+        <img class="work-logo" src="assets/mediaware-logo.svg">
         <span class="years">3.5 years</span>
-      </div>
-      <div class="boxed work-box">
-        <a class="work-logo" href="http://www.nch.com.au">
-          <img src="assets/nch-logo.svg">
-        </a>
+      </a>
+      <a class="boxed work-box" href="http://www.nch.com.au">
+        <img src="assets/nch-logo.svg">
         <span class="years">3.5 years</span>
-      </div>
+      </a>
     </section>
   </body>
 </html>
