Set profile picture to louvre pic #2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section class="profile-card">
-      <img class="profile-picture" src="assets/profile-picture.jpg">
+      <img class="profile-picture" src="assets/profile-picture2.jpg">
       <div class="profile-links">
         <a class="profile-link github-link"        href="https://github.com/joshua-shone"></a>
         <a class="profile-link facebook-link"      href="https://www.facebook.com/josh.shone"></a>
@@ -64,7 +64,7 @@
       </p>
       <a class="boxed work-box aie-box" href="http://www.aie.edu.au/">
         <img class="work-logo" src="assets/aie-logo.svg">
-        <span class="years">1 year</span>
+        <span class="years">2 years</span>
       </a>
       <p class="boxed-heading">
         And worked here:
