New logos: bootstrap, jquery, material, socket.io

--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
         <a class="library-link" href="https://www.polymer-project.org">
           <img src="assets/polymer-logo.svg">
         </a>
+        <a class="library-link" href="https://www.google.com/design/spec/material-design/introduction.html">
+          <img src="assets/material-design-logo.svg">
+        </a>
         <a class="library-link" href="https://nodejs.org">
           <img src="assets/nodejs-logo.svg">
+        </a>
+        <a class="library-link" href="http://socket.io/">
+          <img src="assets/socketio-logo.svg">
         </a>
         <a class="library-link" href="https://www.python.org">
           <img src="assets/python-logo.svg">
@@ -53,8 +59,14 @@
         <a class="library-link" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">
           <img src="assets/web-tech-logos.svg">
         </a>
-        <a class="library-link" href="http://knockoutjs.com/">
+        <a class="library-link" href="http://knockoutjs.com">
           <img src="assets/knockoutjs-logo.svg">
+        </a>
+        <a class="library-link" href="http://getbootstrap.com">
+          <img src="assets/bootstrap-logo.svg">
+        </a>
+        <a class="library-link" href="https://jquery.com">
+          <img src="assets/jquery-logo.svg">
         </a>
         <a class="library-link" href="https://twistedmatrix.com">
           <img src="assets/twisted-logo.svg">
