Added FastClick library with bower

--- a/index.html
+++ b/index.html
@@ -112,4 +112,12 @@
       </a>
     </section>
   </body>
+  <script type='application/javascript' src='/bower_components/fastclick/lib/fastclick.js'></script>
+  <script>
+    if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function() {
+        FastClick.attach(document.body);
+      }, false);
+    }
+  </script>
 </html>
