Mediaware sub-items, better profile pic loading

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           <span class="years">2 years</span>
         </a>
         <div class="child-box">
-          <div class="certificate">
-            <span class="certificate-icon" src="assets/certificate-icon.svg"></span>
+          <div class="child-box-item">
+            <span class="child-box-item-icon certificate-icon"></span>
             <span>Adv Diploma of Professional Game Development</span>
             <span class="certificate-year">2008</span>
           </div>
-          <div class="certificate">
-            <span class="certificate-icon" src="assets/certificate-icon.svg"></span>
+          <div class="child-box-item">
+            <span class="child-box-item-icon certificate-icon"></span>
             <span>Cert IV in 3D Animation for Games and Film</span>
             <span class="certificate-year">2007</span>
           </div>
@@ -102,12 +102,26 @@
       <p class="boxed-heading">
         And worked here:
       </p>
-      <a class="boxed work-box mediaware-box" href="http://www.mediaware.com.au">
-        <img class="work-logo" src="assets/mediaware-logo.svg">
-        <span class="years">3.5 years</span>
-      </a>
+      
+      <div class="box-container mediaware-container">
+        <a class="boxed work-box mediaware-box" href="http://www.mediaware.com.au">
+          <img class="work-logo" src="assets/mediaware-logo.svg">
+          <span class="years">3.5 years</span>
+        </a>
+        <div class="child-box">
+          <div class="child-box-item">
+            <span class="child-box-item-icon product-icon"></span>
+            <span>Product development - InStream</span>
+          </div>
+          <div class="child-box-item">
+            <span class="child-box-item-icon product-icon"></span>
+            <span>Internal infrastructure - web framework</span>
+          </div>
+        </div>
+      </div>
+      
       <a class="boxed work-box" href="http://www.nch.com.au">
-        <img src="assets/nch-logo.svg">
+        <img class="work-logo" src="assets/nch-logo.svg">
         <span class="years">3.5 years</span>
       </a>
     </section>
