Removed 'Friedrichshain' from location section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     
       <span class="location">
         <div class="map-pin"></div>
-        <div>Friedrichshain,</div>
-        <div>Berlin.</div>
+        <div>Berlin</div>
       </span>
       
       <p>
