--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a class="library-link" href="https://nodejs.org">
           <img alt="Node.js logo" src="assets/nodejs-logo.svg">
         </a>
-        <a class="library-link" href="http://socket.io/">
+        <a class="library-link" href="http://socket.io">
           <img alt="socket.io logo" src="assets/socketio-logo.svg">
         </a>
         <a class="library-link" href="https://www.python.org">
@@ -71,6 +71,9 @@
         </a>
         <a class="library-link" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">
           <img alt="Web technology logos" src="assets/web-tech-logos.svg">
+        </a>
+        <a class="library-link" href="https://git-scm.com">
+          <img alt="Git logo" src="assets/git-logo.svg">
         </a>
         <a class="library-link" href="http://knockoutjs.com">
           <img alt="Knockout.js logo" src="assets/knockoutjs-logo.svg">
